@@ -16,6 +16,10 @@ import com.bretth.osmosis.core.pipeline.v0_5.SinkSourceManager;
 public class PolygonFilterFactory extends TaskManagerFactory {
 	private static final String ARG_FILE = "file";
 	private static final String DEFAULT_FILE = "polygon.txt";
+	private static final String ARG_COMPLETE_WAYS = "completeWays";
+	private static final String ARG_COMPLETE_RELATIONS = "completeRelations";
+	private static final boolean DEFAULT_COMPLETE_WAYS = false;
+	private static final boolean DEFAULT_COMPLETE_RELATIONS = false;
 
 	
 	/**
@@ -25,16 +29,20 @@ public class PolygonFilterFactory extends TaskManagerFactory {
 	protected TaskManager createTaskManagerImpl(String taskId, Map<String, String> taskArgs, Map<String, String> pipeArgs) {
 		String fileName;
 		File file;
+		boolean completeWays;
+		boolean completeRelations;
 		
 		// Get the task arguments.
 		fileName = getStringArgument(taskId, taskArgs, ARG_FILE, DEFAULT_FILE);
+		completeWays = getBooleanArgument(taskId, taskArgs, ARG_COMPLETE_WAYS, DEFAULT_COMPLETE_WAYS);
+		completeRelations = getBooleanArgument(taskId, taskArgs, ARG_COMPLETE_RELATIONS, DEFAULT_COMPLETE_RELATIONS);
 		
 		// Create a file object from the file name provided.
 		file = new File(fileName);
 		
 		return new SinkSourceManager(
 			taskId,
-			new PolygonFilter(file),
+			new PolygonFilter(file, completeWays, completeRelations),
 			pipeArgs
 		);
 	}
